@@ -1,3 +1,8 @@
+2004-04-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclClock.c (Tcl_ClockObjCmd): Minor fault in a [clock
+	clicks] error message.
+
 2004-04-07  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tclWinInit.c (TclpSetInitialEncodings): note that WIN32_CE
